[project]
name = "bitsrun"
version = "3.3.1"
description = "A headless login / logout script for 10.0.0.55"
authors = [{ name = "spencerwooo", email = "spencer.woo@outlook.com" }]
dependencies = [
    "requests<3.0.0,>=2.28.2",
    "click<9.0.0,>=8.1.3",
    "platformdirs<3.0.0,>=2.6.2",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "WTFPL" }

[project.urls]
homepage = "https://github.com/BITNP/bitsrun"

[project.scripts]
bitsrun = "bitsrun.cli:cli"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "ruff>=0.0.235",
    "mypy>=0.991",
    "pre-commit>=3.0.0",
    "types-requests>=2.28.11.8",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "B", "SIM"]

[tool.mypy]
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
# disallow_untyped_defs = true
# warn_return_any = true

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
type-check = "mypy bitsrun"
