[project]
name = "bitsrun"
version = "3.5.2"
description = "A headless login / logout script for 10.0.0.55"
authors = [{ name = "spencerwooo", email = "spencer.woo@outlook.com" }]
dependencies = [
    "httpx>=0.24.0",
    "rich>=13.3.5",
    "humanize>=4.5.0",
    "click>=8.1.3",
    "platformdirs>=2.6.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "WTFPL" }
keywords = ["bit", "srun", "srun-login", "srun-client", "beijing-institute-of-technology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Internet",
]

[project.urls]
homepage = "https://github.com/BITNP/bitsrun"

[project.scripts]
bitsrun = "bitsrun.cli:cli"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.265",
    "mypy>=1.2.0",
    "pre-commit>=3.3.1",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "B", "SIM"]

[tool.mypy]
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
# disallow_untyped_defs = true
# warn_return_any = true

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
type-check = "mypy bitsrun"
